--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,23 +20,16 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: daolang.huang@aalto.fi
+phone: +358 0453298788
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
-coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+  street: Servin Maijan tie 6G 110
+  city: Espoo
+  region: Uusimaa
+  postcode: '02150'
+  country: Finland
+  country_code: FI
+
 contact_links:
   - icon: twitter
     icon_pack: fab
