--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ contact_links:
     icon_pack: fab
     name: Github
     link: 'https://github.com/huangdaolang'
-  - icon: wechat
+  - icon: weixin
     icon_pack: fas
     name: Wechat
     link: 'https://drive.google.com/file/d/1BQXW7889tc1oUuGRW-gGUfLTn_d2Bqb3/view?usp=sharing'
